<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProductDetails">

    <data>

        <variable
            name="VM"
            type="com.texavy.mbshoestore.ProductsVM" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:inputType="textPersonName"
                    android:text="@={VM.name}">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_company">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_product_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="20sp"
                    android:inputType="text"
                    android:text="@={VM.company}">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_product_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="20sp"
                    android:inputType="numberDecimal"
                    android:text="@={VM.size}">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_product_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:inputType="text"
                    android:text="@={VM.description}">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/save_product" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:text="@string/cancel_product" />

        </LinearLayout>
    </ScrollView>
</layout>