<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textWelcomeTitle"
            android:text="@string/welcomeTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/PageHeaderStyle" />

        <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/welcome_details_txt"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWelcomeTitle" />

        <Button
            android:id="@+id/btn_go2instructions"
            style="@style/btn_next"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/instructions_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_txt"
            app:layout_constraintVertical_bias="0.686" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>