<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <!--
 Using Constraint layout here as the fragment increases in complexity as well as
     positioning different views/modules relative to each other not to mention the obvious
     advantages of constraint layout such as:
         1- Performance gains
         2- Rendering and GPU overdraw problems easier to deal with using
             constraint layout (not sure about this, but need to do more investigations)


     *** I have to admit, a Linear layout here would have been perfectly fine despite the
     given reasons above
 -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textInstructions"
            style="@style/PageHeaderStyle"
            android:layout_marginTop="20dp"
            android:text="@string/instructions_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructions_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/instructions_details_txt"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInstructions" />

        <Button
            android:id="@+id/btn_startapp"
            style="@style/btn_next"
            android:text="@string/startBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_txt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>